--- a/package.json
+++ b/package.json
@@ -1,60 +1,95 @@
 {
-  "name": "react-jalaali-date-picker",
-  "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
-  "author": "Alireza Hemati <alirezahematideveloper@gmail.com>",
-  "version": "0.0.1",
-  "license": "MIT",
-  "private": false,
-  "keywords": [
-    "date-picker",
-    "react",
-    "react native",
-    "jalaali"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alirezahematidev/react-jalaali-date-picker.git"
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "moment-jalaali": "^0.9.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "jalaali-react-date-picker",
+    "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
+    "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
+    "version": "0.0.1",
+    "license": "MIT",
+    "private": false,
+    "keywords": [
+        "date-picker",
+        "react",
+        "react native",
+        "jalaali"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/alirezahematidev/react-jalaali-date-picker.git"
+    },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist",
+        "src"
+    ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "moment-jalaali": "^0.9.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "eject": "react-scripts eject",
+        "build": "rimraf dist && tsc -b",
+        "test": "yarn build && cross-env TZ=UTC react-app-rewired test --silent --detectOpenHandles",
+        "release": " yarn test -- --watchAll=false && yarn lint && yarn build && yarn publish",
+        "lint": "eslint . --ext tsx,ts --quiet",
+        "format": "prettier --write .",
+        "compile": "tsc -b"
+    },
+    "devDependencies": {
+        "@types/enzyme": "^3.10.12",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/moment-jalaali": "^0.7.5",
+        "@typescript-eslint/eslint-plugin": "^5.31.0",
+        "@typescript-eslint/parser": "^5.31.0",
+        "commitlint": "^17.0.3",
+        "concurrently": "^6.3.0",
+        "cross-env": "^7.0.3",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint": "^8.4.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-webpack-plugin": "^3.2.0",
+        "prettier": "^2.3.2",
+        "prettier-plugin-jsdoc": "^0.3.38",
+        "prettier-plugin-organize-imports": "^2.3.4",
+        "react-app-rewired": "^2.2.1"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "eslintIgnore": [
+        "dist/*"
     ]
-  },
-  "devDependencies": {
-    "@types/moment-jalaali": "^0.7.5"
-  }
 }
