--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "jalaali-react-date-picker",
     "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
     "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "license": "MIT",
     "private": false,
     "keywords": [
@@ -54,6 +54,7 @@
         "compile": "tsc -b"
     },
     "devDependencies": {
+        "@commitlint/config-conventional": "^17.2.0",
         "@types/enzyme": "^3.10.12",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/lodash-es": "^4.17.6",
@@ -71,15 +72,14 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-webpack-plugin": "^3.2.0",
+        "lerna": "^6.0.1",
         "lodash-es": "^4.17.21",
         "prettier": "^2.3.2",
         "prettier-plugin-jsdoc": "^0.3.38",
         "prettier-plugin-organize-imports": "^2.3.4",
         "react-app-rewired": "^2.2.1",
-        "sass": "^1.56.0",
-        "@commitlint/config-conventional": "^17.2.0",
-        "lerna": "^6.0.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "sass": "^1.56.0"
     },
     "eslintConfig": {
         "extends": [
