--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,10 @@
     }
   },
   "extends": [
-    "prettier",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "plugins": ["react", "react-hooks"],
   "rules": {
