--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-    "trailingComma": "all",
-    "endOfLine": "auto",
-    "plugins": ["./node_modules/prettier-plugin-organize-imports", "./node_modules/prettier-plugin-jsdoc"]
+  "trailingComma": "all",
+  "endOfLine": "auto",
+  "plugins": [
+    "./node_modules/prettier-plugin-organize-imports",
+    "./node_modules/prettier-plugin-jsdoc"
+  ]
 }
