--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.0.4",
+  "version": "0.0.8",
   "license": "MIT",
   "private": false,
   "keywords": [
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
+    "@svgr/webpack": "^6.5.1",
     "@types/enzyme": "^3.10.12",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/lodash-es": "^4.17.6",
@@ -80,8 +81,7 @@
     "prettier-plugin-jsdoc": "^0.3.38",
     "prettier-plugin-organize-imports": "^3.2.0",
     "react-app-rewired": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.56.0"
+    "rimraf": "^3.0.2"
   },
   "eslintConfig": {
     "extends": [
