--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.0.91",
+  "version": "0.0.93",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -70,6 +70,7 @@
     "commitlint": "^17.0.3",
     "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.4.1",
@@ -83,7 +84,8 @@
     "prettier-plugin-jsdoc": "^0.3.38",
     "prettier-plugin-organize-imports": "^3.2.0",
     "react-app-rewired": "^2.2.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1"
   },
   "eslintConfig": {
     "extends": [
