--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src"],
+  "include": ["src", "src/custom.d.ts", "src/**/*"],
   "exclude": ["node_modules", "./node_modules", "./node_modules/*"]
 }
