--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.0.99",
+  "version": "0.1.0",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -50,7 +50,7 @@
     "eject": "react-scripts eject",
     "build": "rimraf dist && tsc -b ",
     "test": "yarn build && cross-env TZ=UTC react-app-rewired test  --detectOpenHandles",
-    "release": " yarn test -- --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-assets yarn publish",
+    "release": " yarn test -- --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-assets && yarn publish",
     "lint": "eslint . --ext tsx,ts --quiet",
     "format": "prettier --write .",
     "compile": "tsc -b",
