--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "eject": "react-scripts eject",
     "build": "rimraf dist && tsc -b ",
     "test": "yarn build && cross-env TZ=UTC react-app-rewired test  --detectOpenHandles",
-    "release": " yarn test -- --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-assets && yarn publish",
+    "release": " yarn test --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-assets && yarn copy-custom && yarn publish",
     "lint": "eslint . --ext tsx,ts --quiet",
     "format": "prettier --write .",
     "compile": "tsc -b",
     "copy-styles": "Xcopy .\\src\\styles .\\dist\\styles /E/I",
-    "copy-assets": "Xcopy .\\src\\assets .\\dist\\assets /E/I"
+    "copy-assets": "Xcopy .\\src\\assets .\\dist\\assets /E/I",
+    "copy-custom": "Xcopy .\\src\\custom.d.ts .\\dist /E/I"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.2.0",
@@ -86,7 +87,8 @@
     "prettier-plugin-organize-imports": "^3.2.0",
     "react-app-rewired": "^2.2.1",
     "rimraf": "^3.0.2",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1"
   },
   "eslintConfig": {
     "extends": [
