--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type": "git",
     "url": "https://github.com/alirezahematidev/react-jalaali-date-picker.git"
   },
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
