--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -108,7 +108,7 @@
     "dist/*"
   ],
   "peerDependencies": {
-    "moment-jalaali": ">= 0.9.6",
-    "@types/moment-jalaali":">= 0.7.5"
+    "@types/moment-jalaali": ">= 0.7.5",
+    "moment-jalaali": ">= 0.9.6"
   }
 }
