change build dir to lib

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,14 @@
     "declarationMap": true,
     "downlevelIteration": true,
     "checkJs": false,
-    "outDir": "dist",
-    "rootDir": "src"
+    "outDir": "lib",
+    "rootDir": "src",
+    "baseUrl": ".",
+    "paths": {
+      "@utils/*": ["./src/utils/*"],
+      "@core/*": ["./src/core/*"],
+      "@components/*": ["./src/components/*"]
+    }
   },
   "include": ["src", "picker-env.d.ts", "src/custom.d.ts"],
   "exclude": ["node_modules", "./node_modules", "./node_modules/*"]
