--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,14 +22,8 @@
     "downlevelIteration": true,
     "checkJs": false,
     "outDir": "lib",
-    "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "@utils/*": ["./src/utils/*"],
-      "@core/*": ["./src/core/*"],
-      "@components/*": ["./src/components/*"]
-    }
+    "rootDir": "src"
   },
   "include": ["src", "picker-env.d.ts", "src/custom.d.ts"],
-  "exclude": ["node_modules", "./node_modules", "./node_modules/*"]
+  "exclude": ["node_modules", "lib", "./node_modules", "./node_modules/*"]
 }
