--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "type": "git",
         "url": "https://github.com/alirezahematidev/react-jalaali-date-picker.git"
     },
-    "main": "lib/index.js",
+    "main": "lib/main.js",
     "types": "lib/index.d.ts",
     "files": [
         "lib",
@@ -45,10 +45,10 @@
         "web-vitals": "^2.1.0"
     },
     "scripts": {
-        "start": "node scripts/dev-scripts.js && react-scripts start",
+        "start": "node scripts/dev-scripts.js && webpack --mode=development --config webpack.config.ts && react-scripts start",
         "eject": "react-scripts eject",
-        "build": "node scripts/build-scripts.js && rimraf lib  && tsc -b",
-        "test": "yarn build && cross-env TZ=UTC react-app-rewired test  --detectOpenHandles",
+        "build": "node scripts/build-scripts.js && rimraf lib  && tsc -b  && webpack --mode=production --config webpack.config.ts",
+        "test": "yarn build && cross-env TZ=UTC react-scripts test  --detectOpenHandles",
         "release": " yarn test --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-custom && yarn publish",
         "lint": "eslint . --ext tsx,ts --quiet",
         "format": "prettier --write .",
@@ -74,6 +74,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-webpack-plugin": "^3.2.0",
+        "jest": "^29.3.1",
         "lerna": "^6.0.1",
         "prettier": "^2.7.1",
         "prettier-plugin-jsdoc": "^0.3.38",
@@ -82,7 +83,11 @@
         "rimraf": "^3.0.2",
         "style-loader": "^3.3.1",
         "tsconfig-paths": "^4.1.2",
-        "url-loader": "^4.1.1"
+        "url-loader": "^4.1.1",
+        "webpack-cli": "^5.0.1",
+        "ts-node": "^10.9.1",
+        "@types/webpack": "^5.28.0",
+        "mini-css-extract-plugin": "^2.7.2"
     },
     "eslintConfig": {
         "extends": [
