--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "jalaali-react-date-picker",
     "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
     "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-    "version": "0.1.18",
+    "version": "0.1.21",
     "license": "MIT",
     "sideEffects": false,
     "private": false,
@@ -49,7 +49,7 @@
         "eject": "react-scripts eject",
         "build": "node scripts/build-scripts.js && rimraf lib  && tsc -b  && webpack --mode=production --config webpack.config.ts",
         "test": "yarn build && cross-env TZ=UTC react-scripts test  --detectOpenHandles",
-        "release": " yarn test --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-custom && yarn publish",
+        "release": "yarn test --watchAll=false && yarn lint && yarn build && yarn copy-styles && yarn copy-custom && yarn publish",
         "lint": "eslint . --ext tsx,ts --quiet",
         "format": "prettier --write .",
         "compile": "tsc -b",
@@ -61,6 +61,7 @@
         "@svgr/webpack": "^6.5.1",
         "@types/enzyme": "^3.10.12",
         "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/webpack": "^5.28.0",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
         "commitlint": "^17.0.3",
@@ -76,18 +77,17 @@
         "eslint-webpack-plugin": "^3.2.0",
         "jest": "^29.3.1",
         "lerna": "^6.0.1",
+        "mini-css-extract-plugin": "^2.7.2",
         "prettier": "^2.7.1",
         "prettier-plugin-jsdoc": "^0.3.38",
         "prettier-plugin-organize-imports": "^3.2.0",
         "react-app-rewired": "^2.2.1",
         "rimraf": "^3.0.2",
         "style-loader": "^3.3.1",
+        "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
         "url-loader": "^4.1.1",
-        "webpack-cli": "^5.0.1",
-        "ts-node": "^10.9.1",
-        "@types/webpack": "^5.28.0",
-        "mini-css-extract-plugin": "^2.7.2"
+        "webpack-cli": "^5.0.1"
     },
     "eslintConfig": {
         "extends": [
