webpack fix config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,27 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "module": "CommonJS",
+      "target": "esnext",
+      "module": "commonjs",
+      "lib": ["dom", "dom.iterable", "esnext"],
+      "allowJs": true,
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "noFallthroughCasesInSwitch": true,
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "react-jsx",
+      "noImplicitAny": true,
+      "noUnusedLocals": false,
+      "skipLibCheck": true,
+      "sourceMap": true,
+      "declaration": true,
+      "declarationMap": true,
+      "downlevelIteration": true,
+      "checkJs": false,
       "outDir": "lib",
       "rootDir": "src"
     }
