--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -58,6 +58,8 @@
     "copy-custom": "Xcopy .\\src\\custom.d.ts .\\lib /E/I"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@commitlint/config-conventional": "^17.2.0",
     "@svgr/webpack": "^6.5.1",
     "@types/enzyme": "^3.10.12",
@@ -66,6 +68,8 @@
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "commitlint": "^17.0.3",
     "concurrently": "^6.3.0",
@@ -78,6 +82,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.3.1",
     "lerna": "^6.0.1",
     "mini-css-extract-plugin": "^2.7.2",
