--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@types/jest": "^27.0.1",
     "@types/moment-jalaali": "^0.7.5",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.50",
-    "@types/react-dom": "^17.0.17",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -61,13 +61,13 @@
     "@babel/preset-react": "^7.18.6",
     "@commitlint/config-conventional": "^17.2.0",
     "@svgr/webpack": "^6.5.1",
-    "@types/babel__core": "^7.1.20",
     "@types/enzyme": "^3.10.12",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/moment": "^2.13.0",
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "commitlint": "^17.0.3",
@@ -119,8 +119,6 @@
   ],
   "peerDependencies": {
     "@types/moment-jalaali": ">= 0.7.5",
-    "moment-jalaali": ">= 0.9.6",
-    "react": ">= 17.0.2",
-    "react-dom": ">= 17.0.2"
+    "moment-jalaali": ">= 0.9.6"
   }
 }
