--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jalaali-react-date-picker",
   "description": "An advanced jalaali date picker that supports on all of Javascript frameworks, Specially React and React Native",
   "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni, Mehdi Samimi",
-  "version": "0.1.37",
+  "version": "0.1.38",
   "license": "MIT",
   "sideEffects": false,
   "private": false,
@@ -120,6 +120,8 @@
   ],
   "peerDependencies": {
     "@types/moment-jalaali": ">= 0.7.5",
+    "@types/react": ">= 17.0.21",
+    "@types/react-dom": ">= 17.0.9",
     "moment-jalaali": ">= 0.9.6",
     "react": ">= 17.0.2",
     "react-dom": ">= 17.0.2"
