package json homepage added

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/alirezahematidev/jalaali-react-date-picker/issues"
   },
-  "homepage": "/",
+  "homepage": "https://github.com/alirezahematidev/jalaali-react-date-picker#readme",
   "main": "lib/main.js",
   "module": "lib/main.js",
   "types": "lib/index.d.ts",
