--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bugs": {
         "url": "https://github.com/alirezahematidev/jalaali-react-date-picker/issues"
     },
-    "homepage": "https://github.com/alirezahematidev/jalaali-react-date-picker#readme",
+    "homepage": "/",
     "main": "lib/main.js",
     "module": "lib/main.js",
     "types": "lib/index.d.ts",
@@ -45,9 +45,8 @@
         "cross-env": "^7.0.3",
         "moment": "^2.29.4",
         "moment-jalaali": "^0.9.6",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.4.2",
-        "web-vitals": "^2.1.0"
+        "react-scripts": "^5.0.1",
+        "typescript": "^4.4.2"
     },
     "scripts": {
         "start": "node scripts/dev-scripts.js && webpack --mode=development --config webpack.config.ts && react-scripts start",
@@ -63,7 +62,6 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@commitlint/config-conventional": "^17.2.0",
-        "@svgr/webpack": "^6.5.1",
         "@types/enzyme": "^3.10.12",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/moment": "^2.13.0",
