--- a/package.json
+++ b/package.json
@@ -1,133 +1,134 @@
 {
-  "name": "jalaali-react-date-picker",
-  "description": "This package is a date picker component for React that supports the Jalaali (Iranian/Shamsi/Persian) calendar system. It provides an easy-to-use interface for selecting a date in the Jalaali calendar and is fully customizable with options for setting the start and end date range, localization, and more.",
-  "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni <mohammadgharouni@icloud.com>, Mehdi Samimi <samimi.dev@gmail.com>",
-  "version": "1.0.7",
-  "license": "MIT",
-  "sideEffects": false,
-  "private": false,
-  "keywords": [
-    "date picker",
-    "react",
-    "jalaali",
-    "shamsi",
-    "calendar",
-    "persian"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alirezahematidev/jalaali-react-date-picker.git"
-  },
-  "bugs": {
-    "url": "https://github.com/alirezahematidev/jalaali-react-date-picker/issues"
-  },
-  "homepage": "https://github.com/alirezahematidev/jalaali-react-date-picker#readme",
-  "main": "lib/main.js",
-  "module": "lib/main.js",
-  "types": "lib/index.d.ts",
-  "typings": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/moment-jalaali": "^0.7.5",
-    "@types/node": "^16.7.13",
-    "classnames": "^2.3.2",
-    "cross-env": "^7.0.3",
-    "moment": "^2.29.4",
-    "moment-jalaali": "^0.9.6",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.4.2"
-  },
-  "scripts": {
-    "start": "node scripts/dev-scripts.js && yarn format && webpack --mode=development --config webpack.config.ts && react-scripts start",
-    "eject": "react-scripts eject",
-    "build": "node scripts/build-scripts.js && yarn format && rimraf lib  && tsc -b  && webpack --mode=production --config webpack.config.ts",
-    "test": "yarn build && cross-env TZ=UTC react-scripts test  --detectOpenHandles",
-    "release": "yarn test --watchAll=false && yarn lint && yarn build && yarn publish",
-    "lint": "eslint . --ext tsx,ts --quiet",
-    "format": "prettier --write .",
-    "compile": "tsc -b"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/enzyme": "^3.10.12",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/moment": "^2.13.0",
-    "@types/react": "^17.0.21",
-    "@types/react-dom": "^17.0.9",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^9.1.2",
-    "clean-webpack-plugin": "^4.0.0",
-    "commitlint": "^17.0.3",
-    "concurrently": "^6.3.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-webpack-plugin": "^3.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
-    "mini-css-extract-plugin": "^2.7.2",
-    "prettier": "^2.7.1",
-    "prettier-plugin-jsdoc": "^0.3.38",
-    "prettier-plugin-organize-imports": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.2",
-    "url-loader": "^4.1.1",
-    "webpack-cli": "^5.0.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "jalaali-react-date-picker",
+    "description": "This package is a date picker component for React that supports the Jalaali (Iranian/Shamsi/Persian) calendar system. It provides an easy-to-use interface for selecting a date in the Jalaali calendar and is fully customizable with options for setting the start and end date range, localization, and more.",
+    "author": "Alireza Hemati <alirezahematideveloper@gmail.com>, Mohamad Gharouni <mohammadgharouni@icloud.com>, Mehdi Samimi <samimi.dev@gmail.com>",
+    "version": "1.0.7",
+    "license": "MIT",
+    "sideEffects": false,
+    "private": false,
+    "keywords": [
+        "react-datepicker",
+        "range-datepicker",
+        "jalaali-datepicker",
+        "react",
+        "jalaali",
+        "shamsi",
+        "calendar"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintIgnore": [
-    "lib/*"
-  ],
-  "peerDependencies": {
-    "@types/moment-jalaali": ">= 0.7.5",
-    "@types/react": ">= 17.0.21",
-    "@types/react-dom": ">= 17.0.9",
-    "moment-jalaali": ">= 0.9.6",
-    "react": ">= 17.0.2",
-    "react-dom": ">= 17.0.2"
-  }
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alirezahematidev/jalaali-react-date-picker.git"
+    },
+    "bugs": {
+        "url": "https://github.com/alirezahematidev/jalaali-react-date-picker/issues"
+    },
+    "homepage": "https://github.com/alirezahematidev/jalaali-react-date-picker#readme",
+    "main": "lib/main.js",
+    "module": "lib/main.js",
+    "types": "lib/index.d.ts",
+    "typings": "lib/index.d.ts",
+    "files": [
+        "lib"
+    ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^12.1.5",
+        "@testing-library/react-hooks": "^8.0.1",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/moment-jalaali": "^0.7.5",
+        "@types/node": "^16.7.13",
+        "classnames": "^2.3.2",
+        "cross-env": "^7.0.3",
+        "moment": "^2.29.4",
+        "moment-jalaali": "^0.9.6",
+        "react-scripts": "^5.0.1",
+        "typescript": "^4.4.2"
+    },
+    "scripts": {
+        "start": "node scripts/dev-scripts.js && yarn format && webpack --mode=development --config webpack.config.ts && react-scripts start",
+        "eject": "react-scripts eject",
+        "build": "node scripts/build-scripts.js && yarn format && rimraf lib  && tsc -b  && webpack --mode=production --config webpack.config.ts",
+        "test": "rimraf lib  && tsc -b && cross-env TZ=UTC react-scripts test  --detectOpenHandles",
+        "release": "yarn test --watchAll=false && yarn lint && yarn build && yarn publish",
+        "lint": "eslint . --ext tsx,ts --quiet",
+        "format": "prettier --write .",
+        "compile": "tsc -b"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@commitlint/config-conventional": "^17.2.0",
+        "@types/enzyme": "^3.10.12",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/moment": "^2.13.0",
+        "@types/react": "^17.0.21",
+        "@types/react-dom": "^17.0.9",
+        "@types/webpack": "^5.28.0",
+        "@typescript-eslint/eslint-plugin": "^5.31.0",
+        "@typescript-eslint/parser": "^5.31.0",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^9.1.2",
+        "clean-webpack-plugin": "^4.0.0",
+        "commitlint": "^17.0.3",
+        "concurrently": "^6.3.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.2",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint": "^8.4.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.3.1",
+        "mini-css-extract-plugin": "^2.7.2",
+        "prettier": "^2.7.1",
+        "prettier-plugin-jsdoc": "^0.3.38",
+        "prettier-plugin-organize-imports": "^3.2.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "rimraf": "^3.0.2",
+        "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.3.6",
+        "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^4.1.2",
+        "url-loader": "^4.1.1",
+        "webpack-cli": "^5.0.1"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "eslintIgnore": [
+        "lib/*"
+    ],
+    "peerDependencies": {
+        "@types/moment-jalaali": ">= 0.7.5",
+        "@types/react": ">= 17.0.21",
+        "@types/react-dom": ">= 17.0.9",
+        "moment-jalaali": ">= 0.9.6",
+        "react": ">= 17.0.2",
+        "react-dom": ">= 17.0.2"
+    }
 }
