feat: storybook for live demo examples

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "downlevelIteration": true,
     "checkJs": false,
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "typeRoots": ["lib/index.d.ts", "@types"]
   },
   "ts-node": {
     "compilerOptions": {
