--- a/package.json
+++ b/package.json
@@ -57,12 +57,22 @@
         "release": "yarn test --watchAll=false && yarn lint && yarn build && yarn publish",
         "lint": "eslint . --ext tsx,ts --quiet",
         "format": "prettier --write .",
-        "compile": "tsc -b"
+        "compile": "tsc -b",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@commitlint/config-conventional": "^17.2.0",
+        "@storybook/addon-actions": "^6.5.15",
+        "@storybook/addon-essentials": "^6.5.15",
+        "@storybook/addon-interactions": "^6.5.15",
+        "@storybook/addon-links": "^6.5.15",
+        "@storybook/builder-webpack5": "^6.5.15",
+        "@storybook/manager-webpack5": "^6.5.15",
+        "@storybook/react": "^6.5.15",
+        "@storybook/testing-library": "^0.0.13",
         "@types/enzyme": "^3.10.12",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/moment": "^2.13.0",
@@ -84,6 +94,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-storybook": "^0.6.10",
         "eslint-webpack-plugin": "^3.2.0",
         "html-webpack-plugin": "^5.5.0",
         "jest": "^29.3.1",
@@ -100,7 +111,8 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
         "url-loader": "^4.1.1",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "@types/is-function": "^1.0.1"
     },
     "eslintConfig": {
         "extends": [
