--- a/package.json
+++ b/package.json
@@ -110,9 +110,9 @@
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.2",
+        "tsconfig-paths-webpack-plugin": "^4.0.0",
         "url-loader": "^4.1.1",
-        "webpack-cli": "^5.0.1",
-        "@types/is-function": "^1.0.1"
+        "webpack-cli": "^5.0.1"
     },
     "eslintConfig": {
         "extends": [
