--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "@types/react": "^17.0.21",
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
+        "@types/webpack-node-externals": "^2.5.3",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
         "babel-core": "^6.26.3",
@@ -112,7 +113,8 @@
         "tsconfig-paths": "^4.1.2",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "url-loader": "^4.1.1",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-node-externals": "^3.0.0"
     },
     "eslintConfig": {
         "extends": [
